--- a/.gitignore
+++ b/.gitignore
@@ -258,3 +258,6 @@ $RECYCLE.BIN/
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
 
 temp/
+
+# Ignore bin directory
+bin/
