--- a/docker/builders/package.json
+++ b/docker/builders/package.json
@@ -2,13 +2,17 @@
   "name": "@clack/prompts-docker-builders",
   "version": "0.0.0",
   "scripts": {
-    "start": "tsc && node dist/index.js"
+    "start": "tsc && npm run copy-files && node dist/index.js",
+    "copy-files": "cpx \"src/**/*.yaml\" dist"
   },
   "dependencies": {
     "@clack/prompts": "^0.2.0",
+    "cpx": "^1.5.0",
+    "js-yaml": "^4.1.0",
     "picocolors": "^1.0.0"
   },
   "devDependencies": {
+    "@types/js-yaml": "^4.0.5",
     "@types/node": "^18.15.11"
   }
 }
