--- a/docker/builders/tsconfig.json
+++ b/docker/builders/tsconfig.json
@@ -3,7 +3,8 @@
     "target": "ES2020",
     "module": "CommonJS",
     "lib": ["ES2020", "DOM"],
-    "outDir": "./dist",
+    "outDir": "dist",
+    "rootDir": "src",
     "strict": true,
     "esModuleInterop": true,
     "moduleResolution": "node",
@@ -11,6 +12,6 @@
     "skipLibCheck": true,
     "resolveJsonModule": true
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*.ts", "src/**/*.yaml"],
   "exclude": ["node_modules", "**/*.spec.ts", "**/*.test.ts"]
 }
