--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -3,7 +3,7 @@ services:
   sd:
     build:
       context: .
-      dockerfile: ./dockerfile/Dockerfile.launch_base
+      dockerfile: ./dockerfile/Dockerfile.launch_ext
       args:
         sdwebui: "true"
     runtime: nvidia
@@ -14,8 +14,10 @@ services:
       - "7860:7860"
       - "8888:8888"
     volumes:
-      - /mnt/flies/AI_research/Stable_Diffusion/stable-diffusion-webui-master/models/:/home/stable-diffusion-webui/models
-      - /mnt/flies/AI_research/Stable_Diffusion/stable-diffusion-webui-master/embeddings/:/home/stable-diffusion-webui/embeddings
+      - /mnt/flies/AI_research/Stable_Diffusion/stable-diffusion-webui-master/models:/home/stable-diffusion-webui/models
+      - /mnt/flies/AI_research/Stable_Diffusion/stable-diffusion-webui-master/embeddings:/home/stable-diffusion-webui/embeddings
+      - /mnt/flies/AI_research/Stable_Diffusion/stable-diffusion-webui-master/models/SadTalker/checkpoints/:/home/stable-diffusion-webui/extensions/SadTalker/checkpoints/
+      - /mnt/flies/AI_research/Stable_Diffusion/stable-diffusion-webui-master/outputs:/home/stable-diffusion-webui/outputs
       # - /mnt/assets/Linux_install/repos/sd/repositories/:/home/stable-diffusion-webui/repositories
     stdin_open: true
     tty: true
