--- a/docker/builders/tsconfig.json
+++ b/docker/builders/tsconfig.json
@@ -1,8 +1,7 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
     "module": "CommonJS",
-    "lib": ["ES2020", "DOM"],
+    "ignoreDeprecations": "5.0",
     "outDir": "dist",
     "rootDir": "src",
     "strict": true,
