--- a/docker/dockerfile/Dockerfile.sdwebui_ext
+++ b/docker/dockerfile/Dockerfile.sdwebui_ext
@@ -45,13 +45,16 @@ RUN git clone --depth=1 https://github.com/KohakuBlueleaf/a1111-sd-webui-lycoris
 # 安装depthmap2mask
 RUN cd $NOTEBOOK_DIR/stable-diffusion-webui/repositories && git clone https://github.com/isl-org/MiDaS midas && cd midas && git checkout b845b78
 
-# 还原工作目录
-WORKDIR $NOTEBOOK_DIR
 
 # 进行一次安装，以便将插件的依赖安装到容器中
-# 通过修改 launch.py 文件，将 start() 函数注释掉，避免启动服务
-# 将 launch.py 复制到 launch_for_install.py
-RUN cp $NOTEBOOK_DIR/stable-diffusion-webui/launch.py $NOTEBOOK_DIR/stable-diffusion-webui/launch_for_install.py
-# 修改 launch_for_install.py 文件，找到 if __name__ == "__main__": 那一行，并去掉 start()
-RUN sed -i '/if __name__ == "__main__":/,/start()/ {/start()/ s/start()//}' $NOTEBOOK_DIR/stable-diffusion-webui/launch_for_install.py
-RUN cd $NOTEBOOK_DIR/stable-diffusion-webui/ && python launch_for_install.py --skip-torch-cuda-test
+
+WORKDIR $NOTEBOOK_DIR/stable-diffusion-webui
+ENV COMMANDLINE_ARGS --skip-torch-cuda-test
+RUN python -c "import launch; launch.prepare_environment()"
+
+# # 通过修改 launch.py 文件，将 start() 函数注释掉，避免启动服务
+# # 将 launch.py 复制到 launch_for_install.py
+# RUN cp $NOTEBOOK_DIR/stable-diffusion-webui/launch.py $NOTEBOOK_DIR/stable-diffusion-webui/launch_for_install.py
+# # 修改 launch_for_install.py 文件，找到 if __name__ == "__main__": 那一行，并去掉 start()
+# RUN sed -i '/if __name__ == "__main__":/,/start()/ {/start()/ s/start()//}' $NOTEBOOK_DIR/stable-diffusion-webui/launch_for_install.py
+# RUN cd $NOTEBOOK_DIR/stable-diffusion-webui/ && python launch_for_install.py --skip-torch-cuda-test
