--- a/docker/dockerfile/Dockerfile.pytorch
+++ b/docker/dockerfile/Dockerfile.pytorch
@@ -1,5 +1,5 @@
 # 第二阶段：创建名为py3.10.6的Python环境，安装PyTorch 2.0.0环境
-FROM conda:jupyter AS py
+FROM conda:jupyter
 
 WORKDIR $NOTEBOOK_DIR
 RUN conda create -y -n py3.10.6 python=3.10.6 && \
