--- a/docker/package.json
+++ b/docker/package.json
@@ -10,11 +10,13 @@
     "@clack/prompts": "^0.2.0",
     "cpx": "^1.5.0",
     "js-yaml": "^4.1.0",
-    "picocolors": "^1.0.0"
+    "picocolors": "^1.0.0",
+    "progress": "^2.0.3"
   },
   "devDependencies": {
     "@types/js-yaml": "^4.0.5",
     "@types/node": "^18.15.11",
+    "@types/progress": "^2.0.5",
     "pkg": "^5.8.1"
   },
   "bin": "./dist/index.js"
