--- a/docker/package.json
+++ b/docker/package.json
@@ -2,9 +2,10 @@
   "name": "@clack/prompts-docker-builders",
   "version": "0.0.0",
   "scripts": {
-    "start": "tsc && npm run copy-files && node dist/index.js",
-    "copy-files": "cpx \"src/**/*.yaml\" dist",
-    "build": "tsc && npm run copy-files && pkg . -t node14 -C gzip --out-path bin && 7z a -t7z -m0=lzma2 -mx=9 -mmt=on ./bin/prompts-docker-builders.7z ./bin/prompts-docker-builders"
+    "start": "npm run clean && tsc && npm run copy-files && node dist/index.js",
+    "copy-files": "cpx \"src/**/*.{yaml,json}\" dist",
+    "build": "npm run clean && tsc && npm run copy-files && pkg . -t node14 -C gzip --out-path bin && 7z a -t7z -m0=lzma2 -mx=9 -mmt=on ./bin/prompts-docker-builders.7z ./bin/prompts-docker-builders",
+    "clean": "del-cli dist"
   },
   "dependencies": {
     "@clack/prompts": "^0.2.0",
@@ -15,8 +16,9 @@
   },
   "devDependencies": {
     "@types/js-yaml": "^4.0.5",
-    "@types/node": "^18.15.11",
+    "@types/node": "^18.16.1",
     "@types/progress": "^2.0.5",
+    "del-cli": "^5.0.0",
     "pkg": "^5.8.1"
   },
   "bin": "./dist/index.js"
