--- a/docker/package.json
+++ b/docker/package.json
@@ -10,11 +10,13 @@
   "dependencies": {
     "@clack/prompts": "^0.2.0",
     "cpx": "^1.5.0",
+    "i18next": "^22.4.15",
     "js-yaml": "^4.1.0",
     "picocolors": "^1.0.0",
     "progress": "^2.0.3"
   },
   "devDependencies": {
+    "@types/i18next": "^13.0.0",
     "@types/js-yaml": "^4.0.5",
     "@types/node": "^18.16.1",
     "@types/progress": "^2.0.5",
