--- a/docker/package.json
+++ b/docker/package.json
@@ -2,7 +2,7 @@
   "name": "@clack/prompts-docker-builders",
   "version": "0.0.0",
   "scripts": {
-    "start": "npx ts-node src/index.ts",
+    "start": "npx ts-node src",
     "copy-files": "cpx \"src/**/*.{yaml,json}\" dist",
     "build": "npm run clean && tsc && npm run copy-files && pkg . -t node14 -C gzip --out-path bin && 7z a -t7z -m0=lzma2 -mx=9 -mmt=on ./bin/prompts-docker-builders.7z ./bin/prompts-docker-builders",
     "clean": "del-cli dist"
