build temp docker compose yaml

--- a/docker/package.json
+++ b/docker/package.json
@@ -2,7 +2,7 @@
   "name": "@clack/prompts-docker-builders",
   "version": "0.0.0",
   "scripts": {
-    "start": "npx ts-node src",
+    "start": "ts-node -r tsconfig-paths/register src",
     "copy-files": "cpx \"src/**/*.{yaml,json}\" dist",
     "build": "npm run clean && tsc && npm run copy-files && pkg . -t node14 -C gzip --out-path bin && 7z a -t7z -m0=lzma2 -mx=9 -mmt=on ./bin/prompts-docker-builders.7z ./bin/prompts-docker-builders",
     "clean": "del-cli dist"
@@ -22,7 +22,8 @@
     "@types/progress": "^2.0.5",
     "del-cli": "^5.0.0",
     "pkg": "^5.8.1",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.2.0"
   },
   "bin": "./dist/index.js"
 }
