--- a/docker/package.json
+++ b/docker/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@clack/prompts": "^0.6.3",
+    "app-root-path": "^3.1.0",
     "cpx": "^1.5.0",
     "i18next": "^22.4.15",
     "js-yaml": "^4.1.0",
