--- a/docker/tsconfig.json
+++ b/docker/tsconfig.json
@@ -26,6 +26,9 @@
       "@utils/*": [
         "src/utils/*"
       ],
+      "@utils": [
+        "src/utils/_index.ts"
+      ],
       "@i18n": [
         "src/i18n/index.ts"
       ],
