perfect run lama clean and plugins

--- a/docker/dockerfile/Dockerfile.lama_cleaner
+++ b/docker/dockerfile/Dockerfile.lama_cleaner
@@ -1,5 +1,15 @@
 FROM sdwebui_ext:rtx4090
 
 RUN conda create --name lama_cleaner --clone py3.10.6
-RUN conda activate lama_cleaner && \
-    python -m pip install lama-cleaner
+
+WORKDIR $NOTEBOOK_DIR
+
+RUN git clone --depth=1 https://github.com/Sanster/lama-cleaner
+RUN cd lama-cleaner && \
+    conda activate lama_cleaner && \
+    python -m pip install -e . 
+RUN conda activate lama_cleaner && python -m pip install \
+    realesrgan \
+    gfpgan \
+    realesrgan \
+    rembg
