Organize the files such as launchImages.ts.

--- a/docker/dockerfile/launch/Dockerfile.sdwebui_base.launch
+++ b/docker/dockerfile/launch/Dockerfile.sdwebui_base.launch
@@ -7,5 +7,5 @@ ENV JUPYTER_PORT=${JUPYTER_PORT}
 COPY /context/scripts/*.sh /scripts/
 RUN chmod +x /scripts/*.sh
 
-# 启动startup脚本
-ENTRYPOINT /scripts/startup.sh
+# 启动
+ENTRYPOINT /scripts/run_jupyter.sh & /scripts/run_python.sh
