--- a/docker/dockerfile/Dockerfile.sdwebui_ext
+++ b/docker/dockerfile/Dockerfile.sdwebui_ext
@@ -31,7 +31,7 @@ RUN git clone --depth=1 https://github.com/alemelis/sd-webui-ar.git
 # 安装 Aspect Ratio Helper
 RUN git clone --depth=1 https://github.com/thomasasfk/sd-webui-aspect-ratio-helper.git
 # 安装ControlNet插件
-RUN pip install mediapipe==0.9.1.0 svglib fvcore opencv-python timm
+# RUN pip install mediapipe==0.9.1.0 svglib fvcore opencv-python timm
 RUN git clone --depth=1 https://github.com/Mikubill/sd-webui-controlnet.git
 # 安装SadTalker
 RUN git clone --depth=1 https://github.com/Winfredy/SadTalker && \
@@ -44,7 +44,8 @@ RUN git clone --depth=1 https://github.com/KohakuBlueleaf/a1111-sd-webui-locon
 RUN git clone --depth=1 https://github.com/KohakuBlueleaf/a1111-sd-webui-lycoris
 # 安装depthmap2mask
 RUN cd $NOTEBOOK_DIR/stable-diffusion-webui/repositories && git clone https://github.com/isl-org/MiDaS midas && cd midas && git checkout b845b78
-
+# # 安装Civitai插件
+# RUN git clone --depth=1 https://github.com/civitai/sd_civitai_extension
 
 # 进行一次安装，以便将插件的依赖安装到容器中
 WORKDIR $NOTEBOOK_DIR/stable-diffusion-webui
