--- a/docker/src/configs/imageBuildConfig.yaml
+++ b/docker/src/configs/imageBuildConfig.yaml
@@ -1,5 +1,5 @@
 globalConfig:
-  targetBuild: lama_cleaner_build
+  targetBuilds: [sdwebui_ext_build,lama_cleaner_build]
 
 dockerfilesPath: ./dockerfile
 contextPath: ./context
