define globalConfig.yaml

--- a/docker/tsconfig.json
+++ b/docker/tsconfig.json
@@ -20,6 +20,9 @@
       "@temp/*": [
         "temp/*"
       ],
+      "@configs": [
+        "src/configs/_index.ts"
+      ],
       "@modules": [
         "src/modules/_index.ts"
       ],
