--- a/docker/src/configs/globalConfig.yaml
+++ b/docker/src/configs/globalConfig.yaml
@@ -1,7 +1,7 @@
 dockerfilesDir: ./dockerfile
 contextDir: ./context
 
-baseBuildConfig:
+dockerBuildConfig:
   conda_build:
     tag: conda:jupyter
     dockerfile: Dockerfile.conda
@@ -29,6 +29,7 @@ baseBuildConfig:
     label: SDWEBUI_EXT_IMAGE.LABEL
     hint: SDWEBUI_EXT_IMAGE.HINT
     dependencies: [conda_build, py_build, sdwebui_base_build]
+    endpointBuild: true
 
   lama_cleaner_build:
     tag: lama_cleaner:rtx4090
@@ -37,5 +38,4 @@ baseBuildConfig:
     label: LAMA_CLEANER_IMAGE.LABEL
     hint: LAMA_CLEANER_IMAGE.HINT
     dependencies: [conda_build, py_build]
-
-targetBuilds: [sdwebui_ext_build,lama_cleaner_build]
+    endpointBuild: true
