--- a/docker/package.json
+++ b/docker/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@clack/prompts": "^0.6.3",
     "app-root-path": "^3.1.0",
+    "async-retry": "^1.3.3",
     "cpx": "^1.5.0",
     "i18next": "^22.4.15",
     "js-yaml": "^4.1.0",
@@ -17,6 +18,7 @@
     "progress": "^2.0.3"
   },
   "devDependencies": {
+    "@types/async-retry": "^1.4.5",
     "@types/i18next": "^13.0.0",
     "@types/js-yaml": "^4.0.5",
     "@types/node": "^18.16.1",
