--- a/docker/src/configs/globalConfig.yaml
+++ b/docker/src/configs/globalConfig.yaml
@@ -39,3 +39,12 @@ dockerBuildConfig:
     hint: LAMA_CLEANER_IMAGE.HINT
     dependencies: [conda_build, py_build]
     endpointBuild: true
+
+  comfyui_build:
+    tag: comfyui_base:rtx4090
+    launchDockerfile: Dockerfile.comfyui.launch
+    dockerfile: Dockerfile.comfyui_base
+    label: COMFYUI_IMAGE.LABEL
+    hint: COMFYUI_IMAGE.HINT
+    dependencies: [conda_build, py_build]
+    endpointBuild: true
