--- a/docker/src/configs/globalConfig.yaml
+++ b/docker/src/configs/globalConfig.yaml
@@ -56,3 +56,12 @@ dockerBuildConfig:
     hint: COMFYUI_EXT_IMAGE.HINT
     dependencies: [conda_build, py_build, comfyui_base_build]
     endpointBuild: true
+
+  tpsmm_base_build:
+    tag: tpsmm_base:rtx4090
+    launchDockerfile: Dockerfile.tpsmm_base.launch
+    dockerfile: Dockerfile.tpsmm_base
+    label: TPSMM_BASE_IMAGE.LABEL
+    hint: TPSMM_BASE_IMAGE.HINT
+    dependencies: [conda_build, py_build]
+    endpointBuild: true
